5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1712_2505.log
== TEST (2019-05-13 14:31:19) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=0
while(i<k):
	x= x + ((-1**i)*((x**y)/factorial(y))
	y=y+2
	i=i+1
-- ERROR:
File "XXXX", line 8
    y=y+2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:31:35) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=0
while(i<k):
	x= x + ((-1**i)*((x**y)/factorial(y))
	y = y + 2
	i=i+1
-- ERROR:
File "XXXX", line 8
    y = y + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:31:56) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=0
while(i<k):
	x= x + ((-1**i)*((x**y)/factorial(y))

	i=i+1
-- ERROR:
File "XXXX", line 9
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:32:02) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=0
while(i<k):
	x= x + ((-1**i)*((x**y)/factorial(y))
-- ERROR:
File "XXXX", line 8
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:33:34) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=0
while(i<=k):
	x= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	print()
-- ERROR:
File "XXXX", line 8
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:34:15) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=0
while(i<k):
	x= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	if(i==k):
		print(x)
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:34:34) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=0
while(i<k):
	x= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:35:22) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
while(i<k):
	x= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:35:28) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
while(i<k):
	x= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:36:41) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
while(i<k):
	x= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:36:56) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
while(i<k):
	x= x + (((-1**i)*(x**y))/factorial(y))
	y = y+2
	i=i+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:38:02) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(i<k):
	v= x + (((-1**i)*(x**y))/factorial(y))
	y = y+2
	i=i+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:38:33) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(i<k):
	v= x + (((-1**i)*(x**y))/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:38:40) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(i<k):
	v= x + (((-1**i)*(x**y))/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:39:07) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=x
while(i<k):
	v= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:39:14) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=x
while(i<k):
	v= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(x, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:43:16) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(x, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v= x + ((-1**i)*(x**y))/factorial(y)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:43:25) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v= x + ((-1**i)*(x**y))/factorial(y)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:43:40) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v= x + ((-1**i)*(x**y))/factorial(y)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:44:10) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=0
v=0
while(v<k):
	v= x - ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v= x - ((-1**i)*(x**y))/factorial(y)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:44:46) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= x + ((-1**i)*(x**y))/factorial(y)
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v= x + ((-1**i)*(x**y))/factorial(y)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:45:14) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= x + (((-1**i)*(x**y))/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v= x + (((-1**i)*(x**y))/factorial(y))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:45:30) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= v + (((-1**i)*(x**y))/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
1.6988651953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:46:11) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= v + (((-1**i)*(x**y))/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
1.6988651953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:46:53) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
1.6988651953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:47:08) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
1.6988651953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:47:16) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
1.6988651953
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:47:54) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v= ((-1**i)*(x**y)/factorial(y))
	if(i==k):
		print(round(v, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v= ((-1**i)*(x**y)/factorial(y))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:48:07) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=1
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v= ((-1**i)*(x**y)/factorial(y))
	if(i==k):
		print(round(v, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    v= ((-1**i)*(x**y)/factorial(y))
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:50:04) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=3
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v= 
	if(i==k):
		print(round(v, 10))
-- ERROR:
File "XXXX", line 11
    v= 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:50:18) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=3
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
3.2695010809
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:50:23) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=3
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
3.2695010809
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:50:28) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=3
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
3.2695010809
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:52:07) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=0
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
1.4917664612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:52:14) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=0
i=1
v=0
while(v<k):
	v= v + ((-1**i)*(x**y)/factorial(y))
	y = y+2
	i=i+1
	v=v+1
	if(i==k):
		print(round(v, 10))
-- OUTPUT:
1.4917664612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:56:53) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=0
i=1
v=0
h=0
while(h<k):
	v= v + (-1**i)*(x**y)/factorial(y)
	y = y+2
	i=i+1
	h=h+1
print(round(v, 10))
-- OUTPUT:
-2.5091527991
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:57:02) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=0
i=1
v=0
h=0
while(h<k):
	v= v + (-1**i)*(x**y)/factorial(y)
	y = y+2
	i=i+1
	h=h+1
print(round(v, 10))
-- OUTPUT:
-2.5091527991
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:59:22) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=0
i=0
sinal=+x
while(i<k):
	y=y+sinal**(2*i+1)/factorial(2*i+1)
	sinal=-sinal
	i=i+1
print(round(y, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:00:13) 
-- CODE:
from math import*
x=eval(input("seno:"))
k=int(input("numero de repeticoes:"))
y=0
i=0
sinal=+x
while(i<k):
	y=y+sinal**(2*i+1)/factorial(2*i+1)
	sinal=-sinal
	i=i+1
print(round(y, 10))
-- EXECUTION TIME:
0.201922
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
